--- a/front-issuer/package.json
+++ b/front-issuer/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "5.0.19",
     "apexcharts": "3.37.0",
     "date-fns": "2.29.3",
+    "ethers": "^6.9.0",
     "firebase": "^10.6.0",
     "formik": "2.2.9",
     "next": "13.1.6",
