--- a/front-issuer/package.json
+++ b/front-issuer/package.json
@@ -32,6 +32,7 @@
     "formik": "2.2.9",
     "lodash": "^4.17.21",
     "next": "13.1.6",
+    "notistack": "^3.0.1",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
