fix: build images, simulate with contract, init redeem

--- a/front-issuer/Dockerfile
+++ b/front-issuer/Dockerfile
@@ -22,6 +22,7 @@ FROM node:18.17.1-alpine as runner
 WORKDIR /app
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/.next ./.next
+COPY --from=builder --chown=10101 /app/public ./public
 COPY .env ./
 COPY package.json ./
 RUN ls
