--- a/front-issuer/package.json
+++ b/front-issuer/package.json
@@ -25,6 +25,7 @@
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "5.0.19",
     "apexcharts": "3.37.0",
+    "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
     "date-fns": "2.29.3",
     "ethers": "^6.9.0",
