--- a/front-issuer/package.json
+++ b/front-issuer/package.json
@@ -18,6 +18,8 @@
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.6",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@govbr-ds/core": "^3.4.1",
     "@heroicons/react": "2.0.16",
     "@metamask/sdk-react": "^0.13.0",
