--- a/front-issuer/.env
+++ b/front-issuer/.env
@@ -11,3 +11,5 @@ NEXT_PUBLIC_CLAIM_ISSUER_ADDRESS=0xC8f3F1959C9999d6288bF2fbF503D479F4870455
 NEXT_PUBLIC_IDENTITY_FACTORY_ADDRESS=0xac15368974F27028B3B18259cc2F28A768692d1F
 NEXT_PUBLIC_IDENTITY_IMPLEMENTATION_AUTHORITY_ADDRESS=0x8600E8e11f76892FDD1Db014c3f105a846473f19
 NEXT_PUBLIC_KYC_MANAGER_ADDRESS=0x3edceFBFF00c3B37b18Ee3De5c9D81a48d3ce816
+
+NEXT_PUBLIC_SCAN_URL=https://mumbai.polygonscan.com/address/
